# FileFlowConvert

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  RENDER_START_COMMAND.txt  converter_service.py  navigation_template.txt  package-lock.json  package.json  patch_privacy.sh  pyproject.toml  render-build.sh  render-start.sh  replit.md  test-options-pruning.html  test-pdf-conversion.js  tsconfig.json  tsconfig.node.json  update_nav.sh
api/: .env.example  .gitignore
attached_assets/: Pasted--Audit-fix-all-converters-producing-invalid-files-clean-file-naming-apply-to-every-tool-Repr-1754599835393_1754599835394.txt  Pasted--Remove-non-functional-Advanced-Options-UI-only-keep-working-ones-Goal-Hide-disable-any-Advanced-1754948079699_1754948079700.txt  Pasted--Restore-clickable-upload-box-on-MP4-MP3-and-Video-Compress-keep-preview-Do-not-touch-any-other-pa-1754932167165_1754932167166.txt  Pasted--Strict-Scope-Goal-Improve-SEO-for-all-pages-by-adding-meta-tags-structured-data-sitemap-and-o-1755267695802_1755267695802.txt  Pasted-Add-these-system-packages-Nix-Update-replit-nix-to-include-ONLY-these-new-deps-pkgs-de-1755264286395_1755264286396.txt  Pasted-Add-video-preview-to-MP4-MP3-and-Video-Compress-match-GIF-Maker-Goal-Reuse-the-working-video-prev-1754930571470_1754930571472.txt  Pasted-Agent-please-do-the-following-in-this-Repl-Install-deps-Run-npm-i-heic-convert-npm-i-multer--1755638421120_1755638421121.txt  Pasted-Build-Proper-Server-Side-File-Conversion-System-The-universal-file-converter-tool-on-the-homepage-do-1754409958443_1754409958444.txt  (+35 more)
(+162 files in other folders)
